<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foograde.muguirotest04.butterknife.MainActivity">

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnWeb"
                android:text="@string/strWeb"
                android:drawableTop="@mipmap/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnPhone"
                android:text="@string/strPhone"
                android:drawableTop="@mipmap/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSms"
                android:text="@string/strSms"
                android:drawableTop="@mipmap/sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnMail"
                android:text="@string/strMail"
                android:drawableTop="@mipmap/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPhoto"
                android:text="@string/strPhoto"
                android:drawableTop="@mipmap/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/imvPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnOther"
                android:text="@string/strOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
