<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:text="@string/aboutName"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvMail"
        android:text="@string/aboutMail"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_below="@id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPhone"
        android:text="@string/aboutPhone"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_below="@id/tvMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>